// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActivityListItem should match snapshot with no props 1`] = `
<div>
  <button
    class="mm-box activity-list-item activity-list-item--single-content-row mm-box--padding-4 mm-box--display-flex mm-box--gap-4 mm-box--flex-wrap-wrap mm-box--width-full mm-box--background-color-background-default"
  >
    <div
      class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-row mm-box--width-full"
    >
      <div
        class="mm-box mm-box--display-inline-flex mm-box--justify-content-space-between mm-box--width-full"
      >
        <div
          class="mm-box activity-list-item__detail-container mm-box--display-inline-flex mm-box--flex-direction-column mm-box--width-1/3 mm-box--sm:width-7/12"
        >
          <p
            class="box mm-text mm-text--body-lg-medium mm-text--font-weight-medium mm-text--ellipsis mm-text--text-align-left box--flex-direction-row box--color-text-default"
          />
        </div>
      </div>
    </div>
  </button>
</div>
`;

exports[`ActivityListItem should match snapshot with props 1`] = `
<div>
  <button
    class="mm-box activity-list-item list-item-test mm-box--padding-4 mm-box--display-flex mm-box--gap-4 mm-box--flex-wrap-wrap mm-box--width-full mm-box--background-color-background-default"
    data-testid="test-id"
  >
    <p
      class="box mm-text mm-text--body-md box--display-flex box--flex-direction-row box--width-full box--color-text-default"
    >
      <p>
        Content rendered at the top
      </p>
    </p>
    <div
      class="mm-box mm-box--display-flex mm-box--gap-4 mm-box--flex-direction-row mm-box--width-full"
    >
      <div
        class="mm-box mm-box--display-inline-flex"
      >
        <span
          class="box mm-icon mm-icon--size-xs box--display-inline-block box--flex-direction-row box--color-inherit"
          style="mask-image: url('./images/icons/custody.svg');"
        />
      </div>
      <div
        class="mm-box mm-box--display-inline-flex mm-box--justify-content-space-between mm-box--width-full"
      >
        <div
          class="mm-box activity-list-item__detail-container mm-box--display-inline-flex mm-box--flex-direction-column mm-box--width-1/3 mm-box--sm:width-7/12"
        >
          <p
            class="box mm-text mm-text--body-lg-medium mm-text--font-weight-medium mm-text--ellipsis mm-text--text-align-left box--flex-direction-row box--color-text-default"
          >
            Hello World
          </p>
          <p
            class="box mm-text mm-text--body-md mm-text--font-weight-normal mm-text--ellipsis mm-text--text-align-left box--flex-direction-row box--color-text-default"
          >
            <p>
              I am a list item
            </p>
          </p>
          <div
            class="mm-box activity-list-item__children"
          >
            <button>
              I am a button
            </button>
          </div>
        </div>
        <div
          class="mm-box activity-list-item__mid-content mm-box--display-inline-flex"
        >
          <p>
            Content rendered in the middle
          </p>
        </div>
        <div
          class="mm-box activity-list-item__right-content"
        >
          <p>
            Content rendered to the right
          </p>
        </div>
      </div>
    </div>
  </button>
</div>
`;
